# LibreSD

./: README.md
LibreSD_1-0-0/: README.md
LibreSD_1-0-0/examples/rp2040/: CMakeLists.txt  libresd_hal_rp2040.c  main.c
LibreSD_1-0-0/include/: libresd.h  libresd_config.h  libresd_fat.h  libresd_hal.h  libresd_sd.h  libresd_shell.h  libresd_types.h
LibreSD_1-0-0/src/: libresd_fat.c  libresd_file.c  libresd_hal.c  libresd_sd.c  libresd_shell.c
